# gemini-search

./: .env.example  README.md  pyproject.toml
src/gemini_search/: chat.py  cli.py  drive_client.py  gemini_client.py  web.py
src/gemini_search/static/: style.css
src/gemini_search/templates/: base.html  index.html
